--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -305,6 +305,39 @@ We'll then use the results of out mapping next week to start estimating diversit
 
 ### Entry 7: 2020-02-05, Wednesday   
 
+#### My population is DG
+
+Qs from last week:
+* paired reads are the ones we want to visualize because unpaired ones don't have partners that passed quality score. Paired useful for genome assembly, etc.
+
+Learning Objectives
+
+1. Reviewing our progress on read cleaning and visualizing QC
+2. start mapping each set of cleaned reads to a reference genome
+3. visualize seq alignment files
+4. process our sam files by
+  * converting to binary (bam) format and sorting by coordinates
+  * removing PCR duplicates
+  * indexing for fast future lookup
+5. calculate mapping stats to assess quality of the result
+6. learn how to put separate bash scripts into a "wrapper" that runs them all
+
+* Mapping cleaned and trimmed reads against the ref genome
+  * reference genome from Norway spruce (congenie.org)
+  * pull out contigs from ref that contained one or more of our probes -> 668,000,000 bp reduced reference genome
+  * genome isn't assembled into chromosomes, they're in contigs that are in some order (we don't know, which is typical for non-model organisms)
+  * Indexed, reduced ref genome to use for mapping is on server here:
+  `/data/project_data/RS_ExomeSeq/ReferenceGenomes/Pabies1.0-genome_reduced.fa`
+  * N50 = gives a metric of the state of the assembly, how much of the genome is assembled into big contigs instead of small ones
+    * sort contigs in order of size
+    * take 50% of size (334 Mbp), start with biggest contigs and go until you have summed up that many Mbps
+    * N50 is size of smallest contig that which the sum of contigs that size and larger equal 50% of the total size
+    * you want it to be a big number to tell you at least half is assembled into big contigs
+    * 101,375 bp is the N50 size for us
+    * small is ok, but bigger gets you more spatial information, closer to the actual chromosomes
+* We're going to write script in text editor
+* test it for just one ind before running for all
+* can kill scripts with ctrl+C
 
 ------
 
