--- a/notebook.Rmd
+++ b/notebook.Rmd
@@ -903,7 +903,7 @@ pheatmap(mat, annotation_col=df)
 <div id='id-section18'/>   
 
 ### Entry 18: 2020-03-23, Monday   
-
+(class cancelled)
 
 ------
 
@@ -912,6 +912,84 @@ pheatmap(mat, annotation_col=df)
 
 ### Entry 19: 2020-03-25, Wednesday   
 
+Reid’s Info Update
+
+* Epigenetics:
+
+  * changes to gene expression not due to changes in DNA sequence
+  * Stable, long term alterations in the transcription potential of a cell that are not necessarily heritable
+* Mechanism
+  * phosphorylation
+  * non-coding RNAs (microRNAs)
+  * small interfering RNAs
+  * Histone modifications
+  * DNA methylation
+* Functional Consequences of Methylation
+  * Promoters/enhancers can be repressed, inhibits binding of transcription factors
+  * Intergenic (silencing TEs etc)
+  * Gene body
+* Differences in methylation across species
+
+* Bisulfite Seq
+  * methylated form of cytosine is 5-methylcytosince
+  * bisulfite treatment of DNA converts cytosine to uracil, but 5-methylcytosine is unaffected
+  * can compare the proportions of Cs by looking at remaining Cs and the converted Cs to Us
+  * Reduced Representation Bisulfite Seq
+  * methylation insensitive restriction enzyme (usually MSPI)
+
+* Copepod Selection Exp
+  * Acartia tonsa, copepod
+  * 4 groups, 4 reps each, 3000-5000 ind per rep
+    * AA control, ambient temp and co2
+    * AH ambient temp high co2
+    * HA high temp and ambient co2
+    * HH high temp and high co2
+  * sampled at generations 0 and 25
+  * reduced representation bisulfite seq (RRBS)
+    * Reduced genome > Rad seq aproach >> restriction sites cuts (Mspl). Insenstive to meythlation.
+    * End repair
+    * adapter ligation
+    * Bisulfite conversion of all unmeythl Cs to Ts
+    * Small amount of DNA from E. coli as control to check downstream effects of how efficient bisulfite conversion was.
+* Pipeline
+  * Clean and visualize
+  * Align to reference genome (with bismark)
+  * extract methylation calls
+  * Process filter calls
+  * Summary figures (PCA, etc)
+  * Test for differential methylation (MethylKit in R)
+* Cleaning
+  * A lot more Ts due to Cs due to bisultife conversions on forward strand
+  * A lot of As in reverse strand due to the reverse compliment of the Ts
+  * Error increase at the end due to un methylated primers.
+  * Primer contamination removed after trimming
+
+* Aligning with Bismark
+
+* Running the Data
+  * AH_F25_3
+
+* Example code (bismark.sh):
+```
+#!/bin/bash
+
+bismark --bowtie2 --multicore 1 \
+    --genome /data/project_data/epigenetics/reference_genome \
+    --output_dir /data/project_data/epigenetics/aligned_output \
+    -1 /data/project_data/epigenetics/trimmed_fastq/SAMPLEID_1.fq.gz \
+    -2 /data/project_data/epigenetics/trimmed_fastq/SAMPLEID_2.fq.gz \
+    --rg_tag --rg_id SAMPLEID --rg_sample SAMPLEID --gzip --local --maxins 1000
+```
+Output files from this:
+
+* SAMPLEID_bismark_bt2_pe.bam
+  * the actual alignment
+* SAMPLEID_bismark_bt2_PE_report.txt
+  * text report of the alignment. Mapping success, etc.
+* SAMPLEID_bismark_bt2_PE_report.html
+  * html report of the alignment. can view in browser
+
+
 
 ------
 
@@ -919,6 +997,235 @@ pheatmap(mat, annotation_col=df)
 <div id='id-section20'/>   
 
 ### Entry 20: 2020-03-30, Monday   
+Analysis
+Mapping Rate Mapping Rate
 
+Methylation extraction report
+
+Analyze with MethylKit in R
+
+```
+library(methylKit)
+library(tidyverse)
+library(ggplot2)
+library(pheatmap)
+
+# first, we want to read in the raw methylation calls with methylkit
+
+# set directory with absolute path (why is this necessary? I have no idea, but gz files wont work with relative paths)
+dir <- "C:/Users/Zoe/Desktop/Ecological-Genomics"
+# read in the sample ids
+samples <- read.table("sample_id.txt", header = F)
+# now point to coverage files
+files <- file.path(dir, samples$V1)
+all(file.exists(files))
+# convert to list
+file.list <- as.list(files)
+# get the names only for naming our samples
+nmlist <- as.list(gsub("_1_bismark_bt2_pe.bismark.cov.gz","",samples$V1))
+# use methRead to read in the coverage files
+myobj <- methRead(location= file.list, sample.id =   nmlist,
+                  assembly = "atonsa", # this is just a string. no actual database
+                  dbtype = "tabix", context = "CpG",
+                  resolution = "base", mincov = 20,
+                  treatment = 
+                    c(0,0,0,0,
+                      1,1,1,1,
+                      2,2,2,2,
+                      3,3,3,3,
+                      4,4,4,4),
+                  pipeline = "bismarkCoverage",
+                  dbdir = dir)
+
+######
+# visualize coverage and filter
+######
+
+# We can look at the coverage for individual samples with getCoverageStats()
+getCoverageStats(myobj[[1]], plot = T)
+
+# and can plot all of our samples at once to compare.
+
+# filter samples by depth with filterByCoverage()
+filtered.myobj <- filterByCoverage(myobj,
+                                   lo.count = 20,
+                                   lo.perc = NULL,
+                                   hi.count = NULL,
+                                   hi.perc = 97.5,
+                                   dbdir = dir)
+
+######
+# merge samples
+######
+
+#Note! This takes a while and we're skipping it
+
+# use unite() to merge all the samples. We will require sites to be present in each sample or else will drop it
+
+meth <- unite()
+
+
+############ 
+meth <- methylKit:::readMethylBaseDB(
+  dbpath = "methylBase_united.txt.bgz",
+  dbtype = "tabix",
+  sample.id =   unlist(nmlist),
+  assembly = "atonsa", # this is just a string. no actual database
+  context = "CpG",
+  resolution = "base",
+  treatment = c(0,0,0,0,
+                1,1,1,1,
+                2,2,2,2,
+                3,3,3,3,
+                4,4,4,4),
+  destrand = FALSE)
+
+# percMethylation() calculates the percent methylation for each site and sample
+pm <- percMethylation(meth)
+
+#plot methylation histograms
+ggplot(gather(as.data.frame(pm)), aes(value)) + 
+  geom_histogram(bins = 10, color="black", fill="grey") + 
+  facet_wrap(~key, ncol = 4)
+
+# calculate and plot mean methylation
+sp.means <- colMeans(pm)
+
+p.df <- data.frame(sample=names(sp.means),
+              group = substr(names(sp.means), 1,6),
+                   methylation = sp.means)
+ggplot(p.df, aes(x=group, y=methylation, color=group)) + 
+  stat_summary(color="black") + geom_jitter(width=0.1, size=3)
+
+# is the fact methylation is higher in AA_F00 real or is it because the mapping rate is so much higher?
+
+# sample clustering
+clusterSamples(meth, dist = "correlation", method = "ward.D", plot = T)
+# things aren't clustering by treatment
+
+# PCA
+PCASamples(meth, screeplot = F)
+
+# subset with reorganize()
+
+meth_sub <- reorganize(meth,sample.ids =
+                         c("AA_F00_1","AA_F00_2",
+                           "AA_F00_3", "AA_F00_4",
+                           "HH_F25_1","HH_F25_2",
+                           "HH_F25_3","HH_F25_4"),
+                       treatment = c(0,0,0,0,1,1,1,1),
+                       save.db=FALSE)
+
+# calculate differential methylation
+
+myDiff <- calculateDiffMeth(meth_sub,
+                            overdispersion = "MN",
+                            mc.cores = 1,
+                            suffix = "AA_HH",
+                            adjust = "qvalue",
+                            test = "Chisq")
+
+# get all differentially methylated bases
+myDiff <- getMethylDiff(myDiff,qvalue = 0.05,
+                         difference = 10)
+# we can visualize the changes in methylation frequencies quickly.
+hist(getData(myDiff)$meth.diff)
+# get hyper methylated bases
+hyper <- getMethylDiff(myDiff, difference = 10, 
+                       qvalue = 0.05, type = "hyper")
+
+# get hypo methylated bases
+hypo <- getMethylDiff(myDiff, difference = 10, 
+                      qvalue = 0.05, type = "hypo")
+
+
+#heatmaps first
+
+# get percent methylation matrix
+pm <- percMethylation(meth_sub)
+# make a dataframe with snp id's, methylation, etc.
+sig.in <- as.numeric(row.names(myDiff))
+pm.sig <- pm[sig.in,]
+
+
+
+# add snp, chr, start, stop
+
+din <- getData(myDiff)[,1:3]
+df.out <- cbind(paste(getData(myDiff)$chr, 
+                      getData(myDiff)$start, 
+                      sep=":"), 
+                din, pm.sig)
+
+colnames(df.out) <- c("snp", colnames(din), 
+                      colnames(df.out[5:ncol(df.out)]))
+df.out <- (cbind(df.out,getData(myDiff)[,5:7]))
+# make a dataframe with snp id's, methylation, etc.
+
+# add snp, chr, start, stop
+
+
+####
+# heatmap
+####
+
+pheatmap(pm.sig, show_rownames = FALSE)
+
+# we can also normalize 
+ctrmean <- rowMeans(pm.sig[,1:4])
+h.norm <- (pm.sig-ctrmean)
+pheatmap(h.norm, show_rownames = FALSE)
+
+
+#####
+#let's look at methylation of specific snps
+####
+
+# convert data frame to long form
+df.plot <- df.out[,c(1,5:12)] %>% pivot_longer(-snp, values_to = "methylation")
+
+df.plot$group <- substr(df.plot$name,1,2)
+head(df.plot)
+
+# Looking at snp LS049205.1:248
+# if you choose a different snp, you can create different plots.
+
+df.plot %>% filter(snp=="LS049205.1:248") %>% 
+  ggplot(., aes(x=group, y=methylation, 
+                color=group, fill=group)) +
+  stat_summary(fun.data = "mean_se", size = 2) +
+  geom_jitter(width = 0.1, size=3, pch=21, color="black")
+
+## write bed file for intersection with genome annotation
+setwd(dir)
+write.table(file = "diffmeth.bed",
+            data.frame(chr = df.out$chr, 
+                       start = df.out$start, 
+                       end = df.out$end),
+            row.names = FALSE, 
+            col.names = FALSE, 
+            quote = FALSE, 
+            sep = "\t")
+```
+* Link to genes
+```
+/data/popgen/bedtools2/bin/bedtools closest -a DIFF.bedFILELOCATION \
+      -b /data/project_data/epigenetics/GCA_900241095.1_Aton1.0_genomic.fa_annotation_table.bed \
+      -D b | \
+      awk '!($10=="-")' > hits.bed
+```
+* first path is location where bedtools is on server
+* `closest` function that calls for closest features between samples
+* `> hits.bed` assign name to output
+* `-D b`: Report distance with respect to the orientation of the interval in B. That is, when B is on the - strand, “upstream” means A has higher start/stop coordinates. When B is on the + strand, “upstream” means A has lower start/stop coordinates.
+
+```
+# count number of hits
+
+cat hits.bed | wc -l
+
+# count number of unique named genes
+cat hits.bed | cut -f 8 | sort | uniq -c
+```
 
 ------
